-------------------------------------------------------------------------------
Component: fh-studio
-------------------------------------------------------------------------------
3.17.27 - 2014-01-14 - IR219 - Damian Beresford
-----------------------------------------------
* #5324 - Add mssql node module as a Cloud Plugin
* #5326 - Add Auth0 as a Cloud Plugin

3.17.26 - 2014-01-07 - IR218 - Wei Li
--------------------------------------------
* 5525 - Fix ios native sdk armv7s linker error

3.17.25 - 2013-12-12 - IR216 - Jason Madigan
--------------------------------------------
* 5348 - Resolved an issue with Landing Pages not rendering in domains with custom landing pages

3.17.24 - 2013-12-09 - IR216 - Wei Li, Jason Madigan
--------------------------------------------
* 5246 - Add support for building windows phone 8 apps
* 5311 - Fixed a bug where API Keys could not be revoked
* 5228 - Bay state health theme - "baystatehealth"

3.17.23 - 2013-12-04 - IR216 - Damian Beresford
-----------------------------------------------
* 5286 - fh-studio work for 'clean' checkbox on deploy screen


3.17.22 - 2013-11-26 - IR215 - David Martin
--------------------------------------------
* 5141 - Added new Cloud Plugins and Plugin category for Amazon Node.js Module
* 5056 - Improvements to autofocus with modals that have input elements
* 5054 - Improvements to Databrowser migration steps to show more detailed info on initialisation errors
* 5037 - Fixed Cloud Environment resources sorting alphanumerically (now just sorting numerically)
* 4930 - Fixed rebinding of buttons in Deployment Targets UI 
* 4647 - Using henr.ie shortend urls for builds

3.17.21 - 2013-11-11 - IR214 - Wei Li
------------------------------------------------------------
* 5058 - Add support for MDM integration

3.17.20 - 2013-11-04 - IR213 - Craig Brookes
------------------------------------------------------------
* 5133 js sdk update


3.17.19 - 2013-11-04 - IR213 - Jason Madigan / Craig Brookes