@@ -805,3 +805,19 @@ var api = new Auth0({
   clientSecret: 'your-client-secret'
 });
 </script>
+
+<script type="text/snippet" id="snippet-newrelic">
+/*
+Make sure you have a New Relic account (http://newrelic.com) before starting.
+
+1. Install node. For now, at least 0.8 is required. Some features (e.g. error tracing) depend in whole or in part on features in 0.10 and above. Development work on the agent is being done against the latest released non-development version of Node.
+2. Install this module via npm install newrelic for the application you want to monitor.
+3. Copy newrelic.js from node_modules/newrelic into the root directory of your application.
+4. Edit newrelic.js and replace license_key's value with the license key for your account.
+5. Add require('newrelic'); as the first line of the app's main module.
+*/
+
+var newrelic = require('newrelic');
+
+</script>
+
