@@ -356,6 +356,15 @@
     ]
   },
   {
+    "name" : "MSSQL",
+    "desc" : "MSSQL database connector for NodeJS",
+    "image": "mssql.png",
+    "tested": false,
+    "category": "Remote Database",
+    "version":  "0.4.2",
+    "docs":  "https://github.com/patriksimek/node-mssql"
+  },
+  {
     "name" : "Dropbox",
     "desc" : "JavaScript client library for the Dropbox API",
     "tested" : false,
@@ -834,18 +843,20 @@
     "category" : "Tools",
     "version" :  "0.2.5",
     "docs" :  "https://github.com/caolan/async"
+  },{
+    "name" : "NewRelic",
+    "desc" : "New Relic for Node.js",
+    "image": "newrelic.png",
+    "tested": false,
+    "category": "Tools",
+    "version":  "1.2.0",
+    "docs":  "https://github.com/newrelic/node-newrelic"
   },
   {
-    "name" : "MSSQL",
-    "desc" : "MSSQL database connector for NodeJS",
-    "image": "mssql.png",
-    "category": "Remote Database",
-    "version":  "0.4.2",
-    "docs":  "https://github.com/patriksimek/node-mssql"
-  },{
     "name" : "Auth0",
     "desc" : "Client library for the Auth0 platform",
     "image": "auth0.png",
+    "tested": false,
     "category": "Tools",
     "version":  "0.2.2",
     "docs":  "https://github.com/auth0/node-auth0"
